--- a/style.css
+++ b/style.css
@@ -149,6 +149,8 @@ iframe{
     color: #000000;
 }
 .foot{
+    height: 20px;
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
