--- a/style.css
+++ b/style.css
@@ -202,6 +202,11 @@
       height: 200px;
       width: 200px;
     }
+
+    .propic img{
+        margin-left: 20px;
+        margin-top: 20px;
+    }
   
     .btn-box a {
       font-size: 14px;
